--- a/pom.xml
+++ b/pom.xml
@@ -67,10 +67,11 @@
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
-                <version>2.9</version>
+                <version>2.8</version>
                 <configuration>
                     <reportVersion>2.7.0</reportVersion>
                     <buildDirectory>.</buildDirectory>
+                    <reportDirectory>target/allure-results</reportDirectory>
                 </configuration>
             </plugin>
         </plugins>
