--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,16 @@
                     <reportDirectory>target/allure-results</reportDirectory>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.8</version>
+                <configuration>
+                    <reportVersion>2.7.0</reportVersion>
+                    <buildDirectory>.</buildDirectory>
+                    <reportDirectory>target/allure-results</reportDirectory>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
