--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,6 @@
-url=https://aqa21onl01.testrail.io/
+url=https://www.saucedemo.com/
 browser=chrome
 headless=false
+password=secret_sauce
+usernameStandard=standard_user
 timeout=10
