--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,5 @@
-url=https://aqa21onl01.testrail.io/
+url=https://www.saucedemo.com/
 browser=chrome
 headless=false
-timeout=10
+usernameStandard=standard_user
+password=secret_sauce
